changed logo and made it responsive

--- a/src/output.css
+++ b/src/output.css
@@ -757,6 +757,10 @@ html, body {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-center {
   align-items: center;
 }
@@ -966,6 +970,10 @@ html, body {
   font-family: Playfair Display, serif;
 }
 
+.font-cinzel {
+  font-family: Cinzel, serif;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -994,6 +1002,11 @@ html, body {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -1055,6 +1068,11 @@ html, body {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-rose-400 {
+  --tw-text-opacity: 1;
+  color: rgb(251 113 133 / var(--tw-text-opacity, 1));
 }
 
 .opacity-90 {
